--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "email": "csaba.tuncsik@gmail.com"
   },
   "scripts": {
-    "client": "webpack-dev-server --config webpack.config.babel.js",
+    "client": "webpack-dev-server --config webpack.development.config.babel.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
